New Site by Klubuntu Inc

--- a/index.html
+++ b/index.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reqqel</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .card {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            text-align: center;
-        }
-        h2 {
-            margin-bottom: 20px;
-        }
-        .contact-info {
-            margin: 10px 0;
-        }
-        a {
-            text-decoration: none;
-            color: #007bff;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Reqqel.music</title>
+    <link rel="icon" href="music_favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-
-    <div class="card">
-        <h2>Kontakt</h2>
-        <div class="contact-info">
-            <p>Email: <a href="mailto:muzyka@reqqel.int.pl">muzyka@reqqel.int.pl</a></p>
-            <p>SoundCloud: <a href="https://soundcloud.com/reqqel" target="_blank">reqqel</a></p>
-            <p>Spotify: <a href="https://open.spotify.com/artist/2fQcLDqQffTO2Qs8j6ao3K" target="_blank">reqqel</a></p>
-            <p>Discord: wavesmiramzabierano</a></p>
-
-            <h2>Sprzęt</h2>
-            <p>Mikrofon: MOZOS M-KIT 900PRO</p>
-            <p>DAW: FL STUDIO + REAPER</p>
-            <p>Laptop: Thinkbook 14-IIL</p>
-            <p>Klawisze MIDI: AKAI LPK25</p>
+    <div class="container">
+        <h1>Reqqel - Muzyka jest życiem</h1>
+        <div class="social-banners">
+            <a href="https://open.spotify.com/artist/2fQcLDqQffTO2Qs8j6ao3K?si=AwpDKxbdQ0uY72l5vGwCrg">
+                <div class="social-banner spotify-banner">
+                    <h2 class="title">Spotify</h2>
+                    <div class="social-link">
+                        <img src="img/icons/spotify-logo.svg" alt="logo" width="60px">
+                        <p class="nick">@reqqel</p>
+                    </div>
+                </div>
+            </a>
+            <a href="https://soundcloud.com/reqqel">
+                <div class="social-banner soundcloud-banner">
+                    <h2 class="title">Soundcloud</h2>
+                    <div class="social-link">
+                        <img src="img/icons/soundcloud.svg" alt="logo" width="60px">
+                        <p class="nick">@reqqel</p>
+                    </div>
+                </div>
+            </a>
+            <a href="https://tiktok.com/@reqqelmusic">
+                <div class="social-banner tiktok-banner">
+                    <h2 class="title">TikTok</h2>
+                    <div class="social-link">
+                        <img src="img/icons/tiktok.svg" alt="logo" width="60px">
+                        <p class="nick">@reqqelmusic</p>
+                    </div>
+                </div>
+            </a>
         </div>
-   
-            </div>
+        <div class="ads-content">
+            <h3>ADS CONTENT</h3>
+        </div>
+        <div class="social-buttons">
+            <a href="mailto:reqqel@int.pl">
+                <div class="social-button">
+                    <img src="img/icons/email.svg" alt="email" width="38px">
+                    <h3>E-MAIL</h3>
+                </div>
+            </a>
+            <a href="https://www.youtube.com/@antekkkmuzyka">
+                <div class="social-button">
+                    <img src="img/icons/youtube.svg" alt="youtube" width="38px">
+                    <h3>YouTube</h3>
+                </div>
+            </a>
+        </div>
     </div>
-
+    <h5>Powered by: <a href="https://klubuntu.eu.org">Kamil Klubuntu</a></h5>
 </body>
+
 </html>
